--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -76,3 +76,11 @@
   background-color: var(--custom-background);
   border: 1px solid gray;
 }
+
+.img-light-dark-bg {
+  background-color: var(--custom-background);
+  border: 1px solid gray;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
